sumo/tests/traci/VariableRetrieval/Junction/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 0xa9 0xff 1/1
simstep 6 1
